# omnirevolve-image-processor

./: .gitignore  package.xml  setup.cfg  setup.py
image_processor/: 01_resize.py  02_color_extract.py  03_edge_detect.py  04_find_contours.py  05_1_scaled_preview.py  05_scale_vectors.py  05_sort_contours.py  06_dedup_layer.py  06_preview_scaled.py  06_sort_contours.py  07_1_preview.py  07_dedup_cross.py  07_dedup_layer_basic.py  08_01_preview.py  08_dedup_cross_basic.py  09_01_preview.py  09_scale_vector.py  09_simplify.py  10_dedup_cross_basic.py  10_preview.py  11_preview_cross.py  12_optimize_plot_order.py  13_build_stream.py  14_preview_stream.py  algorithm.txt  analyze_colors.py  color_palette.py  config.json  config.py  contour_deduplicator.py  contour_processor.py  cross_color_deduplicator.py  deduplication_pipeline.py  detect_edges_multi.py  normalize_image.py  pipeline.py  plotter_pipeline.py  preview_composite.py  process_colors.py  utils.py
image_processor/unusing/: config_manager.py  contour_simplifier.py
shared/: omnirevolve_plotter_stream_creator.py  omnirevolve_plotter_stream_creator_helper.py  omnirevolve_plotter_stream_previewer.py  xyplotter_stream_creator.py  xyplotter_stream_creator_helper.py  xyplotter_stream_previewer.py
stream_generators/plotter_demo/: omnirevolve_plotter_demo.py  xyplotter_demo.py
svg_to_stream/: gcode2stream.py  gcode2svg.py  svg2gcode.py  svg2gcode_.py  svg2stream.py  svg_to_stream.py
tools/: gen_square_nibbles.py
xyplotter_nibbles_tx/: publisher_node.py
