<?xml version="1.0"?>
<package format="3">
  <name>xyplotter_nibbles_tx</name>
  <version>0.0.1</version>
  <description>Byte stream publisher for XY-plotter nibbles</description>
  <maintainer email="userofbgtu@gmail">i_nekrasov</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
